--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMS Double</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+
 </head>
 
 <body>
+    <div class="content">
 
+        <div class="content__text">
+            <h2 class="content__title">Демо-версия</h2>
+            <p class="content__subtitle">За 18 лет деятельности было реализовано более 500 крупных, а так же, не
+                менее 2500 средних и малых проектов. Используя знания и накопленный опыт мы можем предложить</p>
+            <button class="content__btn">Попробовать бесплатно
+                <div class="content__btn-img"></div>
+            </button>
+        </div>
+        <div class="content__image-wrapp">
+            <img class="content__image" src="images/image 15.png" alt="computer">
+        </div>
+
+    </div>
 
     <script src="scripts/script.js"></script>
 </body>
