--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
 
 <body>
     <div class="content">
-
-        <div class="content__text">
-            <h2 class="content__title">Демо-версия</h2>
-            <p class="content__subtitle">За 18 лет деятельности было реализовано более 500 крупных, а так же, не
-                менее 2500 средних и малых проектов. Используя знания и накопленный опыт мы можем предложить</p>
-            <button class="content__btn">Попробовать бесплатно
-                <div class="content__btn-img"></div>
-            </button>
+        <div class="content__description">
+            <div class="content__text">
+                <h2 class="content__title">Демо-версия</h2>
+                <p class="content__subtitle">За 18 лет деятельности было реализовано более 500 крупных, а так же, не
+                    менее 2500 средних и малых проектов. Используя знания и накопленный опыт мы можем предложить</p>
+                <button class="content__btn">Попробовать бесплатно
+                    <div class="content__btn-img">
+                        <img src="images/arrow-up-right.png" alt="arrow">
+                    </div>
+                </button>
+            </div>
         </div>
         <div class="content__image-wrapp">
             <img class="content__image" src="images/image 15.png" alt="computer">
         </div>
-
     </div>
 
     <script src="scripts/script.js"></script>
