--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="content__image-wrapp">
-            <img class="content__image" src="images/image 15.png" alt="computer">
+            <!-- <img class="content__image" src="images/image 15.png" alt="computer"> -->
         </div>
     </div>
 
