Add form and modal

--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
         <div class="content__image-wrapp">
         </div>
     </div>
+    <div class="modal">
+        <div class="modal__form">
+            <form action="#" method="GET">
+                <button class="close"></button>
+                <p class="form__description">Войти в систему</p>
+                <input type="text" class="login" name="login">
+                <input type="password" name="password" class="password">
+                <input type="checkbox" name="checkbox" class="checkbox">
+                <p class="checkbox__description">Запомнить пароль</p>
+                <span>Восстановить</span>
+                <input type="submit" class="login" name="login">Войти</input>
+                <button class="join">Зарегестрироваться</button>
+            </form>
+        </div>
+    </div>
 
     <script src="scripts/script.js"></script>
 </body>
